<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="10sp"
                android:text="@string/yourmoney" />

            <EditText
                android:id="@+id/thisYearEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:inputType="numberDecimal"
                tools:text="2016"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="10sp"
                android:text="@string/month"/>

            <EditText
                android:id="@+id/thisMonthEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:inputType="numberDecimal"
                tools:text="10"/>

            <Button
                android:id="@+id/showButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:layout_gravity="right|end"
                android:text="@string/show"/>

        </LinearLayout>

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graphAll"
            android:layout_width="match_parent"
            android:layout_height="400dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/categories" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graphCategory"
            android:layout_width="match_parent"
            android:layout_height="400dip"
            android:paddingBottom="300dp"/>

    </LinearLayout>
</ScrollView>